[metadata]
name = napari-bmf-bridge
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    binarymeshformat
    numpy

[options.entry_points]
napari.manifest =
    napari-bmf-bridge = napari_bmf_bridge:napari.yaml
